2008-07-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Add stub for U-Boot support. Hopefully someone more
	knowledgeable than I can provide a real address and length.
	* startup/uboot_support.c: New file.

2008-07-24	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* configure.ac, include/bsp.h, startup/bspstart.c,
	startup/linkcmds.base: Support RAM allocation via bootcard.

2008-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* startup/bspstart.c: Enable cache after CPU initialization.  Clear
	only workspace memory area.

2008-07-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/network.c:
	mpc8249eamds support for Gigabit Ethernet works again

2008-07-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/network.c:
	mpc8249eamds uses gmii mode

2008-07-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_AMPOLISH3.

2008-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* irq/irq_init.c, irq/irq.h, startup/linkcmds:
	Removed.

	* README.mpc8313erdb, include/irq-config.h, include/irq.h, irq/irq.c,
	startup/linkcmds.base, startup/linkcmds.mpc8313erdb: New files.

	* Makefile.am, configure.ac, console/config.c, console/console.c,
	i2c/i2c_init.c, include/bsp.h, include/hwreg_vals.h, network/network.c,
	spi/spi_init.c, start/start.S, startup/bspstart.c, startup/cpuinit.c,
	startup/linkcmds.hsc_cm01, startup/linkcmds.mpc8349eamds: Support
	MPC8313ERDB.

2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the